finish "SIMD in Java"